[package]
name = "rofi-games"
authors = ["Rolv Apneseth"]
description = "A rofi plugin which adds a mode to list available games for launch along with their box art"
version = "1.12.2"
edition = "2021"
license-file = "LICENSE"

[dependencies]
tracing = "0.1.*"
rofi-mode = "0.5.*"
lib_game_detector = { version = "0.0.21" }
tracing-subscriber = { version = "0.3.*", features = ["env-filter"] }
toml = "0.9.*"
dirs = "5.0.1"
serde = { version = "1.0.*", features = ["derive"] }
shlex = "1.3.*"
is-terminal = "0.4.16"

[dev-dependencies]
test-case = "3.3.*"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]
