[package]
name = "rofi-games"
authors = ["Rolv Apneseth"]
description = "A rofi plugin which adds a mode to list available games for launch along with their box art"
version = "1.16.2"
edition = "2024"
license-file = "LICENSE"
rust-version = "1.89"

[dependencies]
tracing = "0.1"
rofi-mode = "0.5"
lib_game_detector = { version = "=0.0.29", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = { version = "0.9", default-features = false, features = [
  "std",
  "parse",
  "serde",
] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
shlex = "1.3"
redb = "3.0"
byteorder = "1.5"

[dev-dependencies]
test-case = "3.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]

[features]
default = []
bundled_sqlite = ["lib_game_detector/bundled_sqlite"]
